# enchant

./: .gitignore  CLAUDE.md  Cargo.toml  ENCHANT.md  README.md  enchant.json
docs/: HOW_TO_USE.md
enchant-vscode/: CHANGELOG.md  README.md  package.json
enchant-vscode/src/: extension.ts
prompts/: BASE.md  char.ansi  hat.ansi
src/: error.rs  main.rs
src/agent/: config.rs  mod.rs  prompt.rs
src/agent/mcp/: load.rs  mod.rs  tool.rs
src/agent/models/: mod.rs  model_info.json  model_info.rs
src/agent/tools/: bash.md  bash.rs  edit.md  edit.rs  glob.md  glob.rs  grep.md  grep.rs  ls.md  ls.rs  mod.rs  permission.rs  read.md  read.rs  tool.rs  tool_error.rs  walk_builder.rs  write.md  write.rs
src/agent/tools/bash/: bashtree.rs  mod.rs  parse.rs
src/components/: ansi_text.rs  app.rs  enhanced_input.rs  input_box.rs  markdown_mixed_text.rs  message.rs  mod.rs  permission_prompt.rs  status_line.rs  thinking_indicator.rs
src/util/: enchant_config.rs  mod.rs
