[package]
name = "enchant"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dotenvy = { version = "0.15.7" }
futures = "0.3.31"
genai = "0.4.4"
grep = "0.4.1"
iocraft = { version = "0.7.16" }
taffy = "0.5"
rand = "0.9.2"
schemars = "1.1.0"
schemars_derive = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
unicode-width = "0.2.2"
