[package]
name = "enchant"
version = "0.1.0"
edition = "2024"

[dependencies]
# Essentials
async-trait = "0.1.89"
futures = "0.3.31"
rand = "0.9.2"
schemars = "1.1.0"
schemars_derive = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

# Rendering
iocraft = { version = "0.7.16" }
taffy = "0.5"
unicode-width = "0.2.2"

# AI
genai = "0.4.4"

# CLI
clap = "4.5.53"
dotenvy = { version = "0.15.7" }

# Tool implementations
rmcp = "0.10.0"
handlebars = "6.3.2"
grep = "0.4.1"
glob = "0.3.3"
similar = "2.7.0"

# Sandboxing
docker-api = "0.14.0"
